--- a/app/frontend/driver_dashboard.html
+++ b/app/frontend/driver_dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +17,7 @@
             height: 100vh;
             margin: 0;
         }
+
         .container {
             background-color: white;
             border-radius: 8px;
@@ -26,21 +28,25 @@
             text-align: center;
             box-sizing: border-box;
         }
+
         .logo {
             font-size: 3em;
             font-weight: bold;
             color: #ff66a3;
             margin-bottom: 5px;
         }
+
         .subheading {
             font-size: 1.5em;
             color: #ff66a3;
             margin-bottom: 20px;
         }
+
         .menu {
             list-style-type: none;
             padding: 0;
         }
+
         .menu li {
             background-color: #ff66a3;
             color: white;
@@ -51,9 +57,11 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
+
         .menu li:hover {
             background-color: #ff3385;
         }
+
         .logout {
             background-color: #ff4d4d;
             color: white;
@@ -64,88 +72,109 @@
             transition: background-color 0.3s;
             margin-top: 20px;
         }
+
         .logout:hover {
             background-color: #e60000;
         }
+
         @media (max-width: 768px) {
             .container {
                 padding: 20px;
             }
+
             .logo {
                 font-size: 2.5em;
                 margin-bottom: 5px;
             }
+
             .subheading {
                 font-size: 1.2em;
                 margin-bottom: 15px;
             }
+
             .menu li {
                 padding: 12px;
                 font-size: 1em;
             }
+
             .logout {
                 padding: 8px 16px;
                 font-size: 0.9em;
             }
         }
+
         @media (max-width: 480px) {
             .container {
                 padding: 15px;
             }
+
             .logo {
                 font-size: 2em;
                 margin-bottom: 5px;
             }
+
             .subheading {
                 font-size: 1em;
                 margin-bottom: 10px;
             }
+
             .menu li {
                 padding: 10px;
                 font-size: 0.9em;
             }
+
             .logout {
                 padding: 6px 12px;
                 font-size: 0.8em;
             }
         }
+
         @media (max-width: 360px) {
             .container {
                 padding: 10px;
             }
+
             .logo {
                 font-size: 1.8em;
                 margin-bottom: 5px;
             }
+
             .subheading {
                 font-size: 0.9em;
                 margin-bottom: 5px;
             }
+
             .menu li {
                 padding: 8px;
                 font-size: 0.8em;
             }
+
             .logout {
                 padding: 5px 10px;
                 font-size: 0.75em;
             }
         }
+
         @media (max-width: 320px) {
             .container {
                 padding: 5px;
             }
+
             .logo {
                 font-size: 1.5em;
                 margin-bottom: 5px;
             }
+
             .subheading {
                 font-size: 0.8em;
                 margin-bottom: 5px;
             }
+
             .menu li {
                 padding: 5px;
                 font-size: 0.7em;
             }
+
             .logout {
                 padding: 4px 8px;
                 font-size: 0.7em;
@@ -153,6 +182,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="logo">SWP</div>
@@ -167,15 +197,15 @@
 
     <script>
         function navigateTo(page) {
-            switch(page) {
+            switch (page) {
                 case 'driverInfo':
-                    window.location.href = 'driverInfo.html';
+                    window.location.href = '/driver-info/';
                     break;
                 case 'jobRunning':
-                    window.location.href = 'jobRunning.html';
+                    window.location.href = '/job-running/';
                     break;
                 case 'mileUpdate':
-                    window.location.href = 'mileUpdate.html';
+                    window.location.href = '/mile-update/';
                     break;
                 default:
                     console.log('Unknown page: ' + page);
@@ -183,9 +213,9 @@
         }
 
         function logout() {
-            // Perform logout operations here (e.g., clearing session, making an API call, etc.)
-            window.location.href = 'login.html';
+            window.location.href = '/login/';
         }
     </script>
 </body>
+
 </html>
